<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Atri Tripathi. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="?attr/searchIconPlaceholder"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_item_night_mode"
        android:title="@string/menu_night_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_share"
        android:title="@string/menu_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_exit"
        android:title="@string/menu_exit"
        app:showAsAction="never"/>

</menu>